# GaeaRover

./: .gitignore  Dockerfile  README.md  run.bat  run.sh
src/rover_sim/: CMakeLists.txt  package.xml
src/rover_sim/config/: joint_controller.yaml
src/rover_sim/launch/: rover_sim.launch
src/rover_sim/models/simple_rover/: model.config  model.sdf  model.urdf  model.urdf.xacro
src/rover_sim/src/: lidar_motor_controller.py  lidar_reader.py
src/rover_sim/worlds/: rover_wold.world
