<?xml version="1.0"?>
<package format="2">
    <name>rover_sim</name>
    <version>0.0.0</version>
    <description>The rover_sim package</description>
    <maintainer email="theovilainfr@gmail.com">Theo Vilain</maintainer>
    <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <build_depend>gazebo_ros</build_depend>
    <exec_depend>gazebo_ros</exec_depend>
    <build_depend>gazebo_plugins</build_depend>
    <exec_depend>gazebo_plugins</exec_depend>
    <build_depend>xacro</build_depend>
    <exec_depend>xacro</exec_depend>
    <build_depend>velocity_controllers</build_depend>
    <exec_depend>velocity_controllers</exec_depend>
</package>